--- a/wiki/lhCpp_Enums.wiki
+++ b/wiki/lhCpp_Enums.wiki
@@ -1,5 +1,5 @@
-#summary One-sentence summary of this page.
 #labels lh-cpp
+#lh-cpp enum related features
 
 lh-cpp provides the following feature related to enums:
  * [#Enum_snippet generation of a scoped and iterable enumerated type]
