--- a/wiki/lhCpp_Enums.wiki
+++ b/wiki/lhCpp_Enums.wiki
@@ -10,11 +10,11 @@ lh-cpp provides the following feature related to enums:
 === Enum snippet ===
 
 lh-cpp ships a [muTemplate µtemplate] snippet that expands `enum` into an enum definition with the following properties:
- * C++ scoped (no `MYENUM_VAL1`, `MYENUM_VAL2`, ...)
- * the number of elements is automatically provided (which can be used into static assertion in order to check that an associated array of strings has the same dimension)
+ * C++ scoped (no `MYENUM_VAL1`, `MYENUM_VAL2`, ... but `MYENUM::VAL1`, `MYENUM::VAL2`, ...) (which can be taken advantage of in C++ template functions)
+ * the number of elements is automatically provided (which can be used, for instance, into static assertions in order to check that an associated array of strings has a consistant dimension)
  * iterable with no need to explicitly cast an `int` into the enum type.
 
-Let's say you answer `MyEnum` when requested with the enum name, the following will be inserted:
+Let's say you answer "`MyEnum`" when requested with the enum name, the following will be inserted:
 {{{
 struct MyEnum {
     enum type { «values», MAX__ };
@@ -50,14 +50,14 @@ for (MyEnum::type «e» = MyEnum::type() ; «e» != MyEnum::MAX__ ; ++«e» ) {
 
 === switch-case generation ===
 
-Given an [#Enum_snippet iterable enum] variable or type name, this name and then hit `<c-x>se`. lh-cpp will fill [muTemplate µtemplate] switch-case snippets with all possible values from the enum type.
+Given an [#Enum_snippet iterable enum] variable or type name, type this name and then hit `<c-x>se`. lh-cpp will fill [muTemplate µtemplate] switch-case snippets with all possible values from the enum type. e.g. with:
 {{{
 struct MyEnum {
     enum type { V1, V2, V42, MAX__ };
 ...
 MyEnum::type e;
 }}}
-`e^Xse` expands into:
+in INSERT-mode `e^Xse` expands into:
 {{{
 MyEnum::type e;
 ...
@@ -85,4 +85,4 @@ switch (e)
         }
 }«»
 }}}
-As of today feature requires a ctags database containing all the tags related to the enum, and an [#Enum_snippet iterable enum]. (I plan to support C++0x class-enums and to find eventually an alternative to ctags)
+As of today this feature requires a ctags database containing all the tags related to the enum, and an [#Enum_snippet iterable enum]. (I plan to support C++0x class-enums and to find eventually an alternative to ctags)
