--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -12,7 +12,7 @@ See http://www.gnu.org/licenses/gpl.txt for more information.
 
 = License exception for generated code =
 
-Many lh-vim scripts generate code. Unless specified otherwise, the code generated is under the following licence exception.
+Many lh-vim scripts generate code. Unless specified otherwise, the code generated is under the following license exception.
 
 
 Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
