--- a/wiki/muTemplate.wiki
+++ b/wiki/muTemplate.wiki
@@ -226,13 +226,13 @@ VimL: silent! unlet s:times
 
 == Download ==
   * Requirements: Vim 7.+, [lhVimLib lh-vim-lib], [searchInRuntime], and my [lhBrackets bracketing-system]
-  * As a vimball: [http://lh-vim.googlecode.com/files/mu-template-2.3.0.vba here (v2.3.0)]
+  * As a vimball: ~~[http://lh-vim.googlecode.com/files/mu-template-2.3.0.vba here (v2.3.0)]~~
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
 svn checkout http://lh-vim.googlecode.com/svn/mu-template/trunk/ mu-template-read-only
     }}}
-  * Vim Addon Manager: [http://code.google.com/p/lh-vim/source/browse/mu-template/trunk/mu-template-addon-info.txt mu-template-addon-info.txt]
+  * Vim Addon Manager, install [http://code.google.com/p/lh-vim/source/browse/mu-template/trunk/mu-template-addon-info.txt mu-template@lh]. This is the preferred method because of the various dependencies. N.B.: installing [lhCpp lh-cpp] or [lhRefactor lh-refactor] with VAM will also install µtemplate.
 
 == Credits ==
   * Gergely Kontra is the author of the first version of µTemplate
