Edited wiki page muTemplate through web user interface.

--- a/wiki/muTemplate.wiki
+++ b/wiki/muTemplate.wiki
@@ -13,7 +13,8 @@
     * [muTemplate#XSLT XSLT]
     * [muTemplate#Other_filetypes Other filetypes]
   * [muTemplate#Examples Examples]
-    * [muTemplate#C-_for_snippet C-`for` snippet]
+    * [muTemplate#C-_if_snippet C-`if` snippet]
+    * [muTemplate#C-_case_snippet C-`case` snippet]
     * [muTemplate#Interactive_template-file:_C++_Class_Template Interactive template-file: C++ Class Template]
     * [muTemplate#Completely_useless_recursive_example Completely useless recursive example]
   * [muTemplate#Download Download]
