--- a/wiki/muTemplate.wiki
+++ b/wiki/muTemplate.wiki
@@ -147,7 +147,7 @@ VimL: let s:value_end = '¡'
 VimL: let s:reindent = 1
 VimL: let s:marker_open = '<+'
 VimL: let s:marker_close = '+>'
-if¡C_nl_before_bracket()¡(¡substitute(s:Surround(2, '<+cond+>'), '^\_s*\|\_s*$', '', 'g')¡)¡C_nl_before_curlyB()¡{
+if(¡substitute(s:Surround(2, '<+cond+>'), '^\_s*\|\_s*$', '', 'g')¡){
 ¡s:Surround(1, '<+code+>')¡
 }<++>
 }}}
@@ -161,7 +161,6 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end = s:value_start
 VimL: let s:marker_open = '<+'
 VimL: let s:marker_close = '+>'
-VimL:"" echomsg "case -> " .(empty(s:Args()) ? 'empty' : string(s:Args()))
 VimL: let s:case = empty(s:Args()) ? Marker_Txt('case') : (s:Args()[0])
 VimL: let s:_with_block2 = len(s:Args()) <= 1 ? INPUT("Insert a block for the case (0/1) ?") : (s:Args()[1])
 case <+s:case+>:
@@ -173,60 +172,71 @@ break;
 
 === Interactive template-file: C++ Class Template ===
 {{{
+VimL:" C++ Class Template, Luc Hermitte
+VimL:" hint: Class Wizard (asks for class semantics)
 VimL: let s:value_start = '¡'
-VimL: let s:value_end   = '¡'
+VimL: let s:value_end = '¡'
 VimL: let s:reindent = 1
-VimL: let s:marker_open  = '<+'
+VimL: let s:marker_open = '<+'
 VimL: let s:marker_close = '+>'
-VimL: let s:clsname = inputdialog("class name ?")
+VimL: let s:clsname = empty(s:Args()) ? INPUT("class name ?", lh#marker#txt(expand('%:t:r'))) : (s:Args()[0])
 VimL: call CppDox_ClassWizard(s:clsname)
-VimL:" CppDox_ClassWizard() asks what semantics the class will have 
-VimL:" (value, entity, clonable, ...), and fills in all the g:CppDox_xxx variables
-VimL:" used in this template-file.
 VimL:"
-/**
- * @brief <+brief+>
- *
- * <+doc+>
- *
- * <+@invariants+>
- *
- * <p><b>Semantics</b><br>
- ¡g:CppDox_semantics¡
- * <+ <li> sem+>
- *
- * @version ¡'$'¡revision$
- * ¡CppDox_author()¡
- */
-class ¡s:clsname¡
+VimL:"
+VimL: call s:Include("section-sep", "c", s:clsname." class")
+VimL: silent! unlet s:doc
+VimL: let s:doc = []
+VimL: let s:doc += [{ "tag": "ingroup", "text": "g".lh#option#get('dox_group', lh#marker#txt('Group')) }]
+VimL: let s:doc += [{ "tag": "brief" }]
+VimL: let s:doc += [{ "text": "\n" }]
+VimL: let s:doc += [{ "text": "<+doc+>" }]
+VimL: let s:doc += [{ "text": "\n" }]
+VimL: let s:doc += [{ "tag": "invariant"}]
+VimL: let s:doc += [{ "text": "\n" }]
+VimL: let s:doc += [{ "tag": "semantics"}]
+VimL: let s:doc += [{ "text": g:CppDox_semantics}]
+VimL: let s:doc += [{ "text": "\n" }]
+VimL: let s:doc += [{ "tag": "version", "text": "$"."revision$"}]
+VimL: let s:doc += [{ "tag": "author"}]
+VimL: call s:Include("formatted-comment", "cpp/internals", s:doc)
+class <+s:clsname+>
 ¡g:CppDox_inherits¡
 {
 public:
-    /**@name Construction/destruction
-     */
-    //@{
-    ¡g:CppDox_constructors¡
+/**<+lh#dox#tag('name')+> Construction/destruction
+*/
+//<+lh#dox#tag('{')+>
+VimL: let s:fn_comments = { }
+VimL: let s:fn_comments.brief = "Default constructor."
+VimL: let s:fn_comments.throw = {"optional": 1}
+VimL: call s:Include("function-comment", "cpp/internals",s:fn_comments)
+<+s:clsname+>();
 
-    /**
-     * ¡g:CppDox_isVirtualDest¡ Destructor.
-     *
-     ¡IF(strlen(g:CppDox_isVirtualDest), '', '* @warning this class is not meant to be publicly inherited')¡
-     * @throw Nothing
-     */
-    ¡g:CppDox_isVirtualDest¡ ~¡s:clsname¡() ;
-    //@}
+VimL: "
+VimL: " not documented, this is :DOX job
+<+s:clsname+>(<+define the params, and document me w/ :DOX+>);
 
-    <+Other public functions+>;
+VimL: "
+VimL: " todo: support using default implementations
+MuT: if g:CppDox_do_copy
+VimL: call s:Include("copy-constructor", "cpp", s:clsname)
+VimL: call s:Inject([""])
+VimL: call s:Include("copy-and-swap", "cpp", s:clsname)
 
-    ¡IF(strlen(g:CppDox_protected_members), "protected:\n", '')¡
-    ¡g:CppDox_protected_members¡
+MuT: endif
+VimL: call s:Include("destructor", "cpp",{"name":(s:clsname), "virtual": (g:CppDox_isVirtualDest) })
+//<+lh#dox#tag('}')+>
 
+<+Other public functions+>;
+
+¡IF(strlen(g:CppDox_protected_members), "protected:\n", '')¡
+¡g:CppDox_protected_members¡
 private:
-    ¡g:CppDox_forbidden_members¡
+¡g:CppDox_forbidden_members¡
 
-    <+Private functions+>;
+<+Private functions+>;
 
-    <+Attributes+>;
+<+Attributes+>;
 };<++>
 }}}
 
