--- a/wiki/BTW_make_run.wiki
+++ b/wiki/BTW_make_run.wiki
@@ -1,5 +1,4 @@
 #summary BTW - build, execute, test
-#labels Featured
 <wiki:toc max_depth="3" />
 
 = Introduction =
@@ -65,6 +64,11 @@ How is it related to vim, you'll ask? Well, this means we can compile foo.c from
 The way BTW handles its default settings, we just need to hit `<F7>` to compile the current buffer. And if we need to set options, just set `$CXXFLAGS` once, and hit `<F7>` or `:Make` (note the capital 'M')
 
 NB: my plugin let-modeline may help here.
+
+==== Limitations ==== 
+Of course, this will only work as long as there is no Makefile in the same directory of the file we wish to compile. If there is a Makefile, I strongly suggest you to better organize the directory where your pet projects/tests are. I usually have projects made of single files in a same directory, but when a project (even a small one) is made of several files, I store its files apart. 
+
+Note, that this will work only if there are implicit rules known by gnumake to handle the file you wish to compile. For other organizations, filetypes without implicit rules know by gnumake, or scripts to be interpreted, you can play with [BTW_filter filters], or use other plugins like [https://github.com/xuhdev/SingleCompile SingleCompile].
 
 == Multi-files projects ==
 
