--- a/wiki/BTW_make_run.wiki
+++ b/wiki/BTW_make_run.wiki
@@ -50,6 +50,12 @@ When `(bg):BTW_project_config.type` equals
 
 = Build =
 
+Projects are compiled on `<F7>` or `:Make`, in the directory specified by `(bg):BTW_compilation_dir`. The compilation may be done in background (on nix boxes only), it may use all cores available.
+
+The compilation tries to detect automatically the target though `(bg):BTW_project...` options, though it may be forced as a parameter to `:Make`.
+
+When an error is found, the quickfix window will get automatically opened. However, when the quickfix window is not opened (link errors are not detected by default as compilation errors), the command `:Copen` is provided. `:Copen` differs from `:copen` in the sense it adjust its size the number of lines to display.
+
 == Mono-file projects ==
 
 === From the shell ===
